<resources>
    <string name="app_name">sunshine</string>
    <string name="action_settings">Settings</string>
    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_view_on_map" >view on the map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">285782</string>
    
    <string name="pref_units_label">Temperature unit</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_default_celsius" translatable="false">celsius</string>

    <string name="pref_units_celsius" translatable="false">Celsius</string>
    <string name="pref_units_fahrenheit" translatable="false">Fahrenheit</string>
    <string name="pref_units_kelvin" translatable="false">Kelvin</string>

    <string name="pref_unit_values_celsius" translatable="false">metric</string>
    <string name="pref_unit_values_fahrenheit" translatable="false">imperial</string>
    <string name="pref_unit_values_kelvin" translatable="false">kelvin</string>
    <string name="action_share" translatable="false">share</string>
</resources>
