<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory
        android:title="General Settings"
        android:key="general_settings">
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        />
    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_unit_values_celsius"
        android:summary="@string/pref_units_default_celsius"
        android:entries="@array/units"
        android:entryValues="@array/unit_values"
        />
    </PreferenceCategory>
</PreferenceScreen>